# SpaceGame

./: .gitignore  .ycm_extra_conf.py  README.md  meson.build
Lib/: E_FreeList.c  E_FreeList.h  GUI.c  GUI.h  GenericComponentManager.h  GenericFreeList.h  GenericPackedVector.h  GenericStack.h  GenericVector.h  GenericVector2.h  Logger.h  Macros.h  MarkedFreeList.c  MarkedFreeList.h  Time.c  Time.h  Util.c  Util.h  V2.c  V2.h  V2Macros.h  Vector_size_t.h  sizet_Vector.c  sizet_Vector.h
Lib/FreeList/: GenericFreeList.c  GenericFreeList.h
Lib/Lists/: IDFreeList.c
Lib/Stack/: GenericStack.c  GenericStack.h  IntStack.h  SizeStack.c  SizeStack.h
Lib/Vector/: GenericVector.c  GenericVector.h  IntVector.c  IntVector.h
Lib/tests/: ComponentManager_Tests.h  Data_Structures.c  Data_Structures.h  Freelist_Test.h  PackedVector_Tests.h  Stack_Tests.h  Vector_Tests.h
Src/: Debug.h  Main.c
Src/Engine/: Engine.c  Engine.h  EngineState.h  GameConfig.h  GameVars.c  GameVars.h  GenericDataFunctions.h  RunEngine.c  RunEngine.h
Src/Engine/Components/: Aabb.c  Aabb.h  Acceleration.c  Acceleration.h  Appearance.c  Appearance.h  Attribute.c  Attribute.h  ComponentSets.h  Components.c  Components.h  ComponentsGenerics.h  EngineComponentGenerics.h  EngineComponents.c  EngineComponents.h  Entity.c  Entity.h  Movement.c  Movement.h  MovementGenerics.h  PathFindingNode.c  PathFindingNode.h  Position.c  Position.h  Velocity.c  Velocity.h
Src/Engine/Core/: CameraPosition.h  EngineCore.h  Time.h
Src/Engine/EventManager/: EventEffects.c  EventEffects.h  EventManager.c  EventManager.h
Src/Engine/Events/: GameEvents.c  GameEvents.h  SystemEvents.c  SystemEvents.h
Src/Engine/ExtraState/: EngineExtraState.c  EngineExtraState.h
Src/Engine/Extras/: EngineExtras.c  EngineExtras.h
Src/Engine/GameVars/: GameVars.c  GameVars.h
Src/Engine/Input/: GameInputMaps.c  GameInputMaps.h  InputHandler.c  InputHandler.h  InputManager.c  InputManager.h  InputMap.c  InputMap.h  Mouse.c  Mouse.h  Window.c  Window.h
Src/Engine/InputManager/: Input.c  Input.h
Src/Engine/LLSystems/: Input.c  Input.h  LLSInput.c  LLSInput.h  LLSRender.c  LLSRender.h  LLSystemManager.c  LLSystemManager.h  LLSystems.h  Render.c  Render.h  Shaders.h  Time.c  Time.h  Window.c  Window.h
Src/Engine/Resources/: LoadResources.c  LoadResources.h  ResourceRegistry.c  ResourceRegistry.h
Src/Engine/Systems/: AabbHitTest.c  AabbHitTest.h  ApplyAcceleration.c  ApplyAcceleration.h  ApplyMovementTransforms.c  ApplyMovementTransforms.h  ApplyVelocity.c  ApplyVelocity.h  Render.c  Render.h  RenderCopy.c  RenderCopy.h  SYS_Util.h  TestRectAabb.c  TestRectAabb.h  UpdatePosition.c  UpdatePosition.h  UpdatePositions.c  UpdatePositions.h
Src/tests/: CPT_Appearance_Tests.h  CPT_Components_Tests.h
Tests/: ComponentManager_Tests.h  Data_Structures.c  Data_Structures.h  Freelist_Test.c  Freelist_Test.h  Lib_Tests.c  Stack_Test.c  Stack_Tests.c  Stack_Tests.h  UTI_strcatTest.h  Vector_Tests.c  Vector_Tests.h
UnitTesting/: Run_Tests.c
lib/Lists/: FreeList.h  IDFreeList.c  IDFreeList.h  UIntNodes.c  UIntNodes.h
lib/Stack/: GenericStack.c  GenericStack.h  IntStack.c
mlib/: mgenericmacrogeneration.h  mhashmap.h  minternals.h  mlib.h  mpackedvector.h  msize_vector.h  mstring.h  mvector.h
mlib/tests/: mpackedvectortests.h  mruntests.c  mvectortests.h
src/: Main.c  main.c
